--- a/IIO11300Vktehtavat/Harjoitus1MediaPlayer/MainWindow.xaml
+++ b/IIO11300Vktehtavat/Harjoitus1MediaPlayer/MainWindow.xaml
@@ -5,12 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Harjoitus1MediaPlayer"
         mc:Ignorable="d"
-        Title="My Fine MediaPlayer" Height="350" Width="525">
+        Title="My Fine MediaPlayer" Height="350" Width="473.028">
     <Grid>
-        <Button x:Name="btnPlay" Content="Play" HorizontalAlignment="Left" Margin="26,10,0,0" VerticalAlignment="Top" Width="75" Click="btnPlay_Click"/>
-        <MediaElement x:Name="mediaElement" HorizontalAlignment="Left" Height="228" Margin="40,81,0,0" VerticalAlignment="Top" Width="436" LoadedBehavior="Manual"/>
-        <Button x:Name="btnPause" Content="Pause" HorizontalAlignment="Left" Margin="134,10,0,0" VerticalAlignment="Top" Width="75" Click="btnPause_Click"/>
-        <Button x:Name="btnStop" Content="Stop" HorizontalAlignment="Left" Margin="244,10,0,0" VerticalAlignment="Top" Width="75" Click="btnStop_Click"/>
+        <Button x:Name="btnPlay" Content="Play" HorizontalAlignment="Left" Margin="26,10,0,0" VerticalAlignment="Top" Width="75" Click="btnPlay_Click" IsEnabled="False"/>
+        <MediaElement x:Name="mediaElement" HorizontalAlignment="Left" Height="214" Margin="26,81,0,0" VerticalAlignment="Top" Width="410" LoadedBehavior="Manual"/>
+        <Button x:Name="btnPause" Content="Pause" HorizontalAlignment="Left" Margin="134,10,0,0" VerticalAlignment="Top" Width="75" Click="btnPause_Click" IsEnabled="False"/>
+        <Button x:Name="btnStop" Content="Stop" HorizontalAlignment="Left" Margin="244,10,0,0" VerticalAlignment="Top" Width="75" Click="btnStop_Click" IsEnabled="False"/>
+        <Button x:Name="btnBrowse" Content="Browse" HorizontalAlignment="Left" Margin="361,10,0,0" VerticalAlignment="Top" Width="75" Click="btnBrowse_Click"/>
+        <TextBlock x:Name="txtFileName" HorizontalAlignment="Left" Height="23" Margin="26,44,0,0" TextWrapping="Wrap" Text="D:\\" VerticalAlignment="Top" Width="410"/>
 
     </Grid>
 </Window>
